--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,18 +1,19 @@
 
+.container-fluid {
+    padding-right:0;
+    padding-left:0;
+    margin-right:auto;
+    margin-left:auto
+ }
 
 #imagen{
     background: url(../img/fondo_big_medium.jpg);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: cover;
     max-width: 100%;
-    height: 50%;
+    height: 580px;
 }
 
-#cmb_idioma{
-    border: 1px solid;
-    background-color: rgba(255,255,255,0.5);
-    text-align-last: center;
-}
 .menu a{
     color: white;
 }
@@ -31,16 +32,15 @@
     height:150px;
     border:0px solid #fff;
     background: url(../img/foto.png) no-repeat;
-    /*-moz-box-shadow: 0px 6px 5px #ccc;
-    -webkit-box-shadow: 0px 6px 5px #ccc;
-    box-shadow: 0px 6px 5px #ccc;*/
+    
     -moz-border-radius:150px;
     -webkit-border-radius:150px;
     border-radius:150px;
-    animation: glow 1s infinite alternate;
+    animation: glow 10s infinite alternate;
+    animation-delay: 2s;
 }
 .barra_superior{
-    padding-top: 3%;
+    padding-top: 1%;
     padding-left: 1%;
     padding-right: 1%;
 }
@@ -71,11 +71,34 @@
     padding: 2%;
 }
 
+.datos_personales{
+    background-color: transparent;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+    
+}
+.wrapper_datos_personales{
+    background-color: white;
+    align-content: center;
+    padding: 1%;
+    -moz-box-shadow: 0px 0px 15px 0px #ccc;
+    -webkit-box-shadow: 0px 0px 15px 0px #ccc;
+    box-shadow: 0px 0px 15px 0px #ccc;
+    font-family: 'Exo', sans-serif;
+}
+
+@media screen and (max-width: 376px){
+    #imagen{
+        height: 485px;
+    }
+}
+
 @keyframes glow {
     from {
-      box-shadow: 0 0 10px -10px #848d84;
+      box-shadow: 0 0 15px -15px #dcdfdc;
     }
     to {
-      box-shadow: 0 0 10px 10px #e8f5e8;
+      box-shadow: 0 0 15px 15px transparent;
     }
   }
