--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,6 +13,27 @@
     max-width: 100%;
     height: 580px;
 }
+.menu{ 
+    height:65px; 
+    position:fixed; 
+    top:0;
+    width:100%;
+    text-align:right;
+    z-index: 100;
+}
+
+.wrapper{ 
+    height:2000px; width:100%; padding-top:20px
+}
+.fixed{
+    position:fixed; 
+    top:0;
+    width:100%; 
+    background-color:rgb(0, 0, 0) !important; 
+    color:white; 
+    text-align:right;
+    z-index: 100;
+}
 
 .menu a{
     color: white;
@@ -71,9 +92,15 @@
     padding: 2%;
 }
 
+.titulo{
+    text-align: center !important;
+    font-family: 'Exo', sans-serif;
+    font-size: 1.75rem;
+}
+
 .datos_personales{
     background-color: transparent;
-    padding-top: 5%;
+    padding-top: 100px;
     padding-left: 5%;
     padding-right: 5%;
     
